# qmk_notifier

./: .gitignore  Cargo.toml  LICENSE  PRD.md  README.md  Readme.md  SPEC.md  notifier.c  notifier.h  pattern_match.c  pattern_match.h  qmk_module.json  rules.mk  run_all_tests.sh  run_notifier_stub_tests.sh  test_char_classification.c  test_comprehensive_integration.c  test_error_handling.c  test_fidelity_nfa128.c  test_invalid_patterns.c  test_memory_stress.c  test_metachar_verification.c  test_notifier_dispatch.c  test_notifier_host.c  test_notifier_os.c  test_pattern_match.c  test_word_boundary_basic.c  test_word_boundary_integration.c  validate.sh  validation_report.md
.kiro/specs/config-parameter-hoisting/: design.md  requirements.md  tasks.md
plan/001_b92a9b2b603f/: prd_index.txt  prd_snapshot.md  tasks.json
plan/001_b92a9b2b603f/P1M1T1S1/: PRP.md
plan/001_b92a9b2b603f/P1M1T1S2/: PRP.md
plan/001_b92a9b2b603f/P1M1T1S3/: PRP.md
plan/001_b92a9b2b603f/P1M1T2S1/: PRP.md
plan/001_b92a9b2b603f/P1M1T2S2/: PRP.md
plan/001_b92a9b2b603f/P1M2T1S1/: PRP.md  issue_feedback.md
plan/001_b92a9b2b603f/P1M2T1S2/: PRP.md
plan/001_e329fbe4ae4d/: prd_index.txt  prd_snapshot.md  tasks.json
plan/002_c243e735980a/: delta_prd.md  prd_index.txt  tasks.json
plan/003_16d737de7a3e/: delta_prd.md  prd_index.txt  prd_snapshot.md  tasks.json
plan/004_76ea306f6be9/: delta_prd.md  prd_index.txt  prd_snapshot.md  tasks.json
qmk_stubs/: os_detection.h  print.h  qmk_keyboard_stub.h  qmk_stubs.c  raw_hid.h
src/: config.rs  core.rs  error.rs  lib.rs  main.rs
(+209 files in other folders)
